# freecell-freedom

./: Cargo.toml
locales/: en.yml
src/: lib.rs
