[package]
name = "freecell-freedom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
once_cell = "1.16.0"
rust-i18n = "1.0.1"
tui = "0.19.0"

[build-dependencies]
cbindgen = "0.24.3"
