[package]
name = "freecell-freedom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
once_cell = "1.16.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rust-i18n = "1.0.1"
strum = "0.24"
strum_macros = "0.24"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]

[build-dependencies]
cbindgen = "0.24.3"
